# irc-core

./: Setup.hs  cabal.project  default-gen.nix  default.nix  glirc.cabal  shell.nix
nix/: haskell-overridez.nix
setup/: ChangeLog.md  dependency-tools-plugin.cabal
setup/src/: DependencyTools.hs
